# v2ray-rust

./: Cargo.toml  build.rs
src/: lib.rs  main.rs
src/config/: deserialize.rs  geoip.rs  geosite.rs  mod.rs  route.rs  server_builder.rs  to_chainable_builder.rs
src/proxy/: mod.rs
