[package]
authors = ["darsvador"]
edition = "2021"
exclude = ["./test_config.toml"]
name = "v2ray-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
strict-vmess-udp = []

[dependencies]
actix-rt = "2.8"
actix-server = "2.2.0"
actix-service = "2.0"
aead = "0.5"
aes = "0.8.3"
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21.2"
bitvec = "1"
byte_string = "1.0"
bytes = "1"
chacha20poly1305 = "0.10"
cidr-utils = "0.5.10"
crc32fast = "1.3.2"
domain_matcher = {git = "https://github.com/darsvador/DomainMatcher", rev = "8df5a46746d90900d"}
env_logger = "0.10"
futures-util = {version = "0.3", default-features = false, features = ["sink", "std"]}
generic-array = "0.14.7"
hmac = "0.12"
log = "0.4"
md-5 = "0.10.5"
rand = {version = "0.8", features = ["small_rng"]}
regex = "1.7.3"
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.10.6"
spin = "0.9.6"
tokio = {version = "1.26", features = ["net", "io-util", "macros", "sync"]}
tokio-tungstenite = {version = "0.20", features = ["stream", "handshake"], default-features = false}
tokio-util = {version = "0.7", features = ["codec", "net"]}
toml = "0.5"
uuid = {version = "1.3", features = ["std", "v4"]}
#cidr_matcher={git="https://github.com/Qv2ray/CIDRMatcher"}
gentian = "0.1.8"
http = "0.2"
hyper = {version = "0.14.27", features = ["http1", "client", "server"]}
libc = "0.2"
once_cell = "1"
tower = "0.4.13"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl-probe = "0.1.5"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9.1"
